--- a/src/components/ListFilms/style.css
+++ b/src/components/ListFilms/style.css
@@ -9,16 +9,31 @@ h2 {
     text-align: center;
 }
 
-ul {
+.film {
+    border: 2px solid #ffffff27;
+    border-radius: 20px;
+    transition: all 0.3s;
+    background-image:linear-gradient(to bottom right, rgba(255,255,255,0.2), rgba(255,255,255,0));
+    box-shadow: 10px 10px 10px rgba(30,30,30,0.5);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(10px);
+    margin: 20px;
+}
+
+.film:hover {
+    transform: scale(1.1);
+}
+
+.film ul {
     list-style: none;
-    display: grid;
-    grid-template-columns: repeat(auto-fit,  minmax(200px ,1fr));
-    column-gap: 3rem;
+    display: table-caption;
+    column-gap: 1rem;
     row-gap: 4rem;
     padding: 2rem;
 }
 
-li {
+
+.film ul li {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,6 +41,8 @@ li {
 
 a {
     transition: all 0.3s;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 a:hover {
@@ -37,5 +54,3 @@ img {
     border-radius: 1rem;
     margin-bottom: 2rem;
 }
-
-
