--- a/src/components/ListFilms/style.css
+++ b/src/components/ListFilms/style.css
@@ -1,3 +1,5 @@
+/* ESTILOS DOS CARDS FILMES */
+
 h1 {
     text-align: center;
     margin: 4rem 0;
@@ -7,6 +9,22 @@ h2 {
     font-weight: bold;
     font-size: 1rem;
     text-align: center;
+}
+
+img {
+    width: 180px;
+    border-radius: 1rem;
+    margin-bottom: 2rem;
+}
+
+a {
+    transition: all 0.3s;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+a:hover {
+    transform: scale(1.1);
 }
 
 .film {
@@ -32,25 +50,11 @@ h2 {
     padding: 2rem;
 }
 
-
 .film ul li {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-a {
-    transition: all 0.3s;
-    cursor: pointer;
-    text-decoration: none;
-}
 
-a:hover {
-    transform: scale(1.1);
-}
 
-img {
-    width: 180px;
-    border-radius: 1rem;
-    margin-bottom: 2rem;
-}
