--- a/src/pages/Infos/style.css
+++ b/src/pages/Infos/style.css
@@ -1,8 +1,22 @@
+/* ESTILOS DO CONJUTO 1 */
+
 .infos-bloco h1 {
+    font-family: "Shadows Into Light", cursive;
+    font-weight: 400;
+    font-size: 3.5rem;
     margin: 0;
-    margin: 20px 0 50px 0;
+    margin: 10px 0 40px 0;
     z-index: 20;
 }
+
+.infos-btn-back {
+    display: flex;
+    justify-content: flex-end;
+    cursor: pointer;
+    z-index: 20;
+}
+
+/* ESTILOS DAS INFORMAÇÕES FILME */
 
 .infos-bloco h2 {
     font-size: 1.6rem;
@@ -13,15 +27,9 @@ p {
     font-weight: lighter;
 }
 
-.infos-btn-back {
-    display: flex;
-    justify-content: flex-end;
-    cursor: pointer;
-    z-index: 20;
-}
 
 .infos-btn-back .MuiButton-root {
-    color: #fff !important;
+    color: var(--secondary-color) !important;
 }
 
 .infos-btn-back .MuiButton-root svg {
@@ -78,6 +86,22 @@ p {
     z-index: 5;
 }
 
+.infos-div-img {
+    border: 2px solid #ffffff27;
+    width: 350px;
+    -webkit-animation: scale-up-bl 0.7s ease-out 2s forwards;
+    animation: scale-up-bl 0.7s ease-out 2s forwards;
+}
+
+.infos-div-img:hover {
+    color: var(--primary-color);
+    box-shadow: 0 0 10px var(--primary-color);
+}
+
+.infos-infor img {
+    margin: 0;
+}
+
 #infos-div-2 {
     border: 2px solid #ffffff27;
     border-top-right-radius: 20px;
@@ -90,17 +114,6 @@ p {
     padding: 45px;
 }
 
-.infos-div-img {
-    border: 2px solid #ffffff27;
-    width: 350px;
-    -webkit-animation: scale-up-bl 0.7s ease-out 2s forwards;
-    animation: scale-up-bl 0.7s ease-out 2s forwards;
-}
-
-.infos-infor img {
-    margin: 0;
-}
-
 .infos-text-box {
     display: flex;
     width: auto;
@@ -110,17 +123,15 @@ p {
     padding-right: 20px;
 }
 
-
 .infos-text-box::-webkit-scrollbar-thumb {
-    background-color: rgb(0, 0, 0);
+    background-color: var(--terciary-color);
 }
 
 .infos-text-box::-webkit-scrollbar-thumb:hover {
     background-color: rgb(206, 206, 206);
 }
 
-
-/* ANIMAÇÕES */
+/* ANIMAÇÕES DA IMAGEM */
 
 @-webkit-keyframes scale-up-bl {
     0% {
