--- a/src/pages/Infos/style.css
+++ b/src/pages/Infos/style.css
@@ -46,7 +46,6 @@ p {
     margin-bottom: 10vh;
     background-size: contain;
     background-repeat: no-repeat;
-    background-position-y: -90px;
 }
 
 .infos-bloco::before {
@@ -55,7 +54,7 @@ p {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 900px;
     background: linear-gradient(to top, rgba(0, 0, 0, 1) 0%, rgba(48, 47, 47, 0.705) 100%);
     pointer-events: none;
     z-index: 1;
@@ -163,4 +162,39 @@ p {
         -webkit-transform-origin: 0% 100%;
         transform-origin: 0% 100%;
     }
+}
+
+/* RESPONSIVIDADE */
+
+@media screen and (max-width: 100vh) {
+    .infos-bloco h1 {
+        font-size: 2.2rem;
+    }
+
+    .row {
+        flex-direction: column;
+    }
+
+    .infos-div-img {
+        width: 300px;
+    }
+    .infos-infor {
+        width: 500px;
+    }
+    #infos-div-2 {
+        margin-top: -2vh;
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 15px;
+        border-bottom-left-radius: 15px;
+        width: auto;
+        z-index: -1;
+    }
+    .card-trailer {
+        padding: 10px;
+    }
+    iframe {
+        width: 320px;
+        height: 200px;
+    }
+
 }
